--- a/index.html
+++ b/index.html
@@ -1,45 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-    />
-    <!-- <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    /> -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Weather Dashboard</title>
-  </head>
 
-  <body>
-    <header class="p-5 mb-4 border-5 border-bottom border-dark text-center">
-      <h1 class="display-3">Weather Dashboard</h1>
-      <!-- <p id="currentDay" class="lead"></p> -->
-    </header>
-    <div id="search" class="row input">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"> -->
+  <link rel="stylesheet" href="style.css" />
+  <title>Weather Dashboard</title>
+</head>
+
+<body>
+  <header class="jumbotron-fluid bg-dark text-white text-center">
+    <h1 class="display-3">Weather Dashboard</h1>
+  </header>
+
+  <main class="row justify-space-between" style="border:1px solid black">
+    <div class="col-3" style="border:1px solid red">
+
+      <div class="card">
+        <h3 class="card-header">Search for a city:</h3>
+        <form id="user-form" class="card-body">
+          <input name="cityname" id="cityname" type="text" autofocus="true" class="form-input" />
+          <div class="input-group-append btnPar">
+            <button type="submit" id="button-addon2" class="btn btn-primary search">Search</button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="col-9" style="border:1px solid blue">
+      <div class="card currentweather"></div>
+    </div>
+
+    
+
+    <!-- <div class="col-12 col-md-8">
+          <h2 class="subtitle">Showing Repositories for: <span id="repo-search-term"></span></h2>
+          <div id="repos-container" class="list-group"></div>
+        </div> -->
+  </main>
+
+  <!-- <div id="search" class="row input">
         <div class="col-2 col-md-1 hour text-center py-3">Search for the city</div>
         <textarea class="col-8 col-md-2 description" rows="3"> </textarea>
         <button class="btn saveBtn border border-dark col-2 col-md-1" aria-label="search">
-         <!-- <i class="fas fa-save" aria-hidden="true"></i> -->
-        </button>
-      </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <!-- <script
-      src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
-      integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
-      crossorigin="anonymous"
-    ></script> -->
-    <script src="script.js"></script>
-  </body>
+         <i class="fas fa-save" aria-hidden="true"></i>
+        </button> -->
+  <!-- </div> -->
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+    integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
+  <script src="script.js"></script>
+</body>
+
 </html>
