section for recent searches made

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
           </div>
         </form>
       </div>
+      <div class="card">
+        <h3 class="card-header">Search By city:</h3>
+        <div id="city-buttons" class="card-body recentSearches">
+          <button data-search="cityname" class="btn"></button>
+         </div>
+      </div>
     </div>
     <div class="col-9" style="border:1px solid blue">
       <div class="card currentweather"></div>
@@ -38,8 +44,8 @@
       
       </div>
     </div> -->
-    
-    <div class="recentSearches"></div>
+
+    <!-- <div class="recentSearches"></div> -->
 
 
 
