--- a/index.html
+++ b/index.html
@@ -28,59 +28,25 @@
           </div>
         </form>
       </div>
-      <div class="card">
-        <h3 class="card-header">Search By city:</h3>
-        <div id="city-buttons" class="card-body recentSearches">
-          <button data-search="cityname" class="btn"></button>
-        </div>
-      </div>
-    </div>
-    <div class="col-9" style="border:1px solid blue">
-      <div class="card currentweather"></div>
-      <div class="row future-forecast-container d-block">
-        <!-- 5 day forecast title-->
-        <h2 class="future-forecast-title" id="future-forecast-title"></h2>
-        <div id="forecasts-cards-container" class="forecasts-cards-container d-flex justify-content-between">
-            <!-- future day forecard card -->
-            <div class="future-card bg-primary rounded">
-                <p class="future-date" id="future-date-1"></p>
-                <img id="future-icon-1" src="" alt="">
-                <p class="future-temp" id="future-temp-1"></p>
-                <p class="future-humidity" id="future-humidity-1"></p>
-            </div>
-            <div class="future-card bg-primary rounded">
-                <p class="future-date" id="future-date-2"></p>
-                <img id="future-icon-2" src="" alt="">
-                <p class="future-temp" id="future-temp-2"></p>
-                <p class="future-humidity" id="future-humidity-2"></p>
-            </div>
-            <div class="future-card bg-primary rounded">
-                <p class="future-date" id="future-date-3"></p>
-                <img id="future-icon-3" src="" alt="">
-                <p class="future-temp" id="future-temp-3"></p>
-                <p class="future-humidity" id="future-humidity-3"></p>
-            </div>
-            <div class="future-card bg-primary rounded">
-                <p class="future-date" id="future-date-4"></p>
-                <img id="future-icon-4" src="" alt="">
-                <p class="future-temp" id="future-temp-4"></p>
-                <p class="future-humidity" id="future-humidity-4"></p>
-            </div>
-            <div class="future-card bg-primary rounded">
-                <p class="future-date" id="future-date-5"></p>
-                <img id="future-icon-5" src="" alt="">
-                <p class="future-temp" id="future-temp-5"></p>
-                <p class="future-humidity" id="future-humidity-5"></p>
-            </div>
-        </div>
-    </div>
-    </div>
-    <!-- <div class="col-9" style="border:1px solid green">
-      <div class="card forcastweather">
-        <h3 class="card-header">5-Day forcast:</h3>
       
+      <h3 class="card-header">Search By city:</h3>
+      <div id="city-buttons" class="card-body recentSearches">
+        <button data-search="cityname" class="btn"></button>
       </div>
-    </div> -->
+      
+    </div>
+
+    <div class="col-9" style="border:1px solid blue">
+      <div class="card">
+        <div class="card currentweather"></div>
+      </div>
+    </div>
+    <h2 class="future-forecast-title" id="future-forecast-title"> 5 day forecast:</h2>
+
+    <div class="col-12 future-forecast-container ">
+      <div id="forecasts-cards-container" class="row forecasts-cards-container d-flex">
+      </div>
+    </div>
 
 
   </main>
